ingestion build
